--- a/_Hosts/NeuralNetwork.ConsoleApp/NeuralNetwork.ConsoleApp.csproj
+++ b/_Hosts/NeuralNetwork.ConsoleApp/NeuralNetwork.ConsoleApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\NeuralNetwork.Service\NeuralNetwork.Service.csproj" />
+  </ItemGroup>
+
 </Project>
