--- a/_Hosts/NeuralNetwork.ConsoleApp/NeuralNetwork.ConsoleApp.csproj
+++ b/_Hosts/NeuralNetwork.ConsoleApp/NeuralNetwork.ConsoleApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ScottPlot" Version="4.1.70" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Services\NeuralNetwork.Service\NeuralNetwork.Service.csproj" />
   </ItemGroup>
 
