Initial merge to main - in preparation for proper source control practices

--- a/_Hosts/NeuralNetwork.ConsoleApp/config.json
+++ b/_Hosts/NeuralNetwork.ConsoleApp/config.json
@@ -1,6 +1,8 @@
 {
   "ExperimentSelection": [
     "Experiment_FA_1",
+    "Experiment_FA_2",
+    "Experiment_FA_3",
     "Experiment_LR_1",
     "Experiment_OPT_1"
   ],
