Put the download path as a variable in config.json

--- a/_Hosts/NeuralNetwork.ConsoleApp/config.json
+++ b/_Hosts/NeuralNetwork.ConsoleApp/config.json
@@ -9,5 +9,6 @@
   "NeuralNetworkSelection": [
     "Seq_NN_Demo_1",
     "NN_Custom_1"
-  ]
+  ],
+  "file-download-path": "C:/Users/Owner/Documents/Software Development/C#/Console Applications/NeuralNetwork/NeuralNetwork/Results/"
 }
