Cleaner experiment UI

--- a/_Hosts/NeuralNetwork.ConsoleApp/config.json
+++ b/_Hosts/NeuralNetwork.ConsoleApp/config.json
@@ -10,5 +10,5 @@
     "Seq_NN_Demo_1",
     "NN_Custom_1"
   ],
-  "file-download-path": "C:/Users/Owner/Documents/Software Development/C#/Console Applications/NeuralNetwork/NeuralNetwork/Results/"
+  "FileDownloadPath": "C:/Users/Owner/Documents/Software Development/C#/Console Applications/NeuralNetwork/NeuralNetwork/Results/"
 }
