large nn tested - not hanging, just slow

--- a/_Hosts/NeuralNetwork.ConsoleApp/config.json
+++ b/_Hosts/NeuralNetwork.ConsoleApp/config.json
@@ -3,6 +3,7 @@
     "Experiment_FA_1",
     "Experiment_FA_2",
     "Experiment_FA_3",
+    "Experiment_FA_4",
     "Experiment_LR_1",
     "Experiment_OPT_1"
   ],
